--- a/NLP 2/Conversational AI/Chatbot.ipynb
+++ b/NLP 2/Conversational AI/Chatbot.ipynb
@@ -1022,9 +1022,11 @@
         "# Chatbots\n",
         "\n",
         "*   Part 0: Setup workspace\n",
-        "*   Part 1: Loading Machine learning model on any text dataset for free on a GPU using Collaboratory\n",
+        "*   Part 1: Loading chatbot model on any text dataset for free on a GPU using Collaboratory\n",
         "*   Part 2: Training machine learning model on specific topics \n",
-        "*   Part 3: Start chatting with **BOT**"
+        "*   Part 3: Start chatting with **BOT**\n",
+        "*   Part 4: Evaluate chatbot models\n",
+        "\n"
       ]
     },
     {
@@ -1059,6 +1061,17 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yJ1KtcbJgTpo",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "Connecting to google drive\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -1130,6 +1143,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W1qjebXaghAE",
+        "colab_type": "text"
+      },
+      "source": [
+        "Installing transformer library."
+      ]
     },
     {
       "cell_type": "code",
@@ -1338,19 +1361,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1EJ1uVQT2KL8",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "del basic"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "p-c4EQZDmZi9",
@@ -1430,20 +1440,20 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "FJd8cCF7WNRn",
-        "colab_type": "code",
-        "colab": {}
+        "id": "uOS4ZstmhByj",
+        "colab_type": "text"
       },
       "source": [
+        "Choose the movie genre for fine tuning your chat bot.\n",
+        "Choos between:\n",
         "\n",
-        "a = []\n",
-        "while(1):\n",
-        "    a.append('l')"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "1. movie-animation\n",
+        "2. movie-scifi\n",
+        "3. movie-horror\n",
+        "4. movie-action"
+      ]
     },
     {
       "cell_type": "code",
@@ -1497,19 +1507,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "VkaGd6I02rSD",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "animation_chatbot=chatbot"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
@@ -1531,7 +1528,7 @@
         }
       },
       "source": [
-        "animation_chatbot.generate_sentences()"
+        "chatbot.generate_sentences()"
       ],
       "execution_count": 19,
       "outputs": [
@@ -1857,6 +1854,20 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QkFGNxZhgoK4",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "Refer to the last slide of presentation. What are the characteristics of the pretrained chatbot?\n",
+        "\n",
+        "How fine tuning changes the charactersitics of the pretrained chatbot?"
       ]
     }
   ]
