Update GAN_example_2 (for instructor).ipynb
skip checkpoint

--- a/GAN 2/GAN_example_2 (for instructor).ipynb
+++ b/GAN 2/GAN_example_2 (for instructor).ipynb
@@ -575,7 +575,7 @@
     "  for epoch in range(epochs):\n",
     "    start = time.time()\n",
     "\n",
-    "    checkpoint.restore(tf.train.latest_checkpoint(checkpoint_dir))\n",
+    "    #checkpoint.restore(tf.train.latest_checkpoint(checkpoint_dir))\n",
     "\n",
     "    for image_batch in dataset:\n",
     "      train_step(image_batch)\n",
