Added pictures to data prep file

--- a/Project Object Recognition/data_prep.ipynb
+++ b/Project Object Recognition/data_prep.ipynb
@@ -55,12 +55,64 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Most of the digital images available today are represented in __raster__ format. Raster image contains a two-dimensional table of _pixels_ - small squared (or rectangular) shape elements of the image. There are various ways the information can be embedded into pixel, however we will use the most popular method of RGB, representing three-sized tuple of Red, Green, and Blue intensities. In other words, every pixel is a sequence of three numbers (usually from 0 to 255) and image is a table of pixels.\n",
-        "\n",
-        "Hence, input representation for any colored image can be thought of as three-dimensional table, with dimensions ($width$, $height$, $3$), where ($width$, $height$) tuple is known as _image resolution_. The ratio of the two ($width/frac$) is known as aspect ratio."
+        "Most of the digital images available today are represented in __raster__ format. Raster image contains a two-dimensional table of _pixels_ - small squared (or rectangular) shape elements of the image. "
       ],
       "metadata": {
         "id": "rfqW5GzYsxqi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![](https://drive.google.com/uc?export=view&id=1AeC4a6YCNDBFm3ArdyiKgM7rCHn92xg1)"
+      ],
+      "metadata": {
+        "id": "GfhI8S5XYY_A"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "There are various ways the information can be embedded into pixel, however we will use the most popular method of RGB, representing three-sized tuple of Red, Green, and Blue intensities. \n"
+      ],
+      "metadata": {
+        "id": "vFmpeclBYZPF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![](https://drive.google.com/uc?export=view&id=1yjsqrUxGGecJXvrwFHSX6ZJ1jrjUK11R)"
+      ],
+      "metadata": {
+        "id": "3cAC7YHlZsdJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In other words, every pixel is a sequence of three numbers (usually from 0 to 255) and image is a table of pixels."
+      ],
+      "metadata": {
+        "id": "8M1H2EhOZmcp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![](https://drive.google.com/uc?export=view&id=1Hi3HFJU-yXJX1vtd7lyhIBtSY5WEeXCW)"
+      ],
+      "metadata": {
+        "id": "o6ijjQJzZtDX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hence, input representation for any colored image can be thought of as three-dimensional table, with dimensions ($width$, $height$, $3$), where ($width$, $height$) tuple is known as _image resolution_. The ratio of the two ($width/frac$) is known as aspect ratio."
+      ],
+      "metadata": {
+        "id": "SKGxI7WBZqQu"
       }
     },
     {
@@ -345,6 +397,15 @@
       ],
       "metadata": {
         "id": "haTeOqdS1ri8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![](https://drive.google.com/uc?export=view&id=1YrurRp9FYI3yGmzqqIG9wuPrIpBiAO1D)"
+      ],
+      "metadata": {
+        "id": "u5onYsw6aFum"
       }
     },
     {
