--- a/Project Object Recognition/pt1_Weight_Initialization.ipynb
+++ b/Project Object Recognition/pt1_Weight_Initialization.ipynb
@@ -20,8 +20,7 @@
         "A well chosen initialization can:\n",
         "<ul>\n",
         "<li>Speed up the convergence of gradient descent\n",
-        "<li>Increase the odds of gradient descent converging to a lower training (and generalization) error\n",
-        "</ul."
+        "<li>Increase the odds of gradient descent converging to a lower training (and generalization) error\n"
       ]
     },
     {
