--- a/Advanced Models I/1-Neural_Networks_Introduction.ipynb
+++ b/Advanced Models I/1-Neural_Networks_Introduction.ipynb
@@ -155,7 +155,7 @@
       },
       "source": [
         "## Change the current directory\n",
-        "%cd '/content/gdrive/My Drive/dscamp/dscamp_public/Neural Networks'"
+        "%cd '/content/gdrive/My Drive/dscamp/dscamp_public/Advanced Models I'"
       ],
       "execution_count": null,
       "outputs": [
