Removed method of data collection from phone camera
Method did not work as expected. Some cameras created inconsistencies, not allowing proper data transformation.

--- a/Project Object Recognition/2022 Camp Rock Paper Scissors/Data Collection/data_prep.ipynb
+++ b/Project Object Recognition/2022 Camp Rock Paper Scissors/Data Collection/data_prep.ipynb
@@ -149,20 +149,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "M_gxzY1HUSHF",
-        "outputId": "aa190f8f-9d0d-4c2a-ccfb-e84ce619f7ca"
+        "outputId": "f4d71151-673f-4a1d-8398-07632904a60c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ]
         }
       ],
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "Sph5Z9AuWWaA"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -205,9 +205,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AHKwgGkE50d5",
-        "outputId": "f56b3a2e-12b8-4c6b-8478-78a497303dc6"
+        "outputId": "6e09d381-8de1-4372-e9d9-2150fea38bf3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,22 +224,10 @@
         "%mkdir {proj_path+'/rock'}"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7JGfKcvH5tK4",
-        "outputId": "98591244-8f2d-45ab-fa63-3c91c0a3b580"
+        "id": "7JGfKcvH5tK4"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘/content/gdrive/MyDrive/rps/rock’: File exists\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -247,22 +235,10 @@
         "%mkdir {proj_path+'/paper'}"
       ],
       "metadata": {
-        "id": "KLx48pvr5wts",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3cebabb4-2006-4648-cb60-c10ec399d225"
+        "id": "KLx48pvr5wts"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘/content/gdrive/MyDrive/rps/paper’: File exists\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -270,22 +246,10 @@
         "%mkdir {proj_path+'/scissors'}"
       ],
       "metadata": {
-        "id": "4aJGRH-15wxo",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bc638e87-2dfa-4943-ce38-288a19c5c6fd"
+        "id": "4aJGRH-15wxo"
       },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘/content/gdrive/MyDrive/rps/scissors’: File exists\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -300,22 +264,24 @@
       "cell_type": "code",
       "source": [
         "## Change the current directory\n",
-        "%cd $proj_path"
+        "%cd $proj_path\n",
+        "%ls"
       ],
       "metadata": {
         "id": "2AUBkP5A5Ro_",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "00465704-bf06-4614-92ec-ca033684b2e1"
+        "outputId": "333ddf44-3317-4de2-df31-ea1f47d1c007"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/gdrive/MyDrive/rps\n"
+            "/content/gdrive/MyDrive/rps\n",
+            "\u001b[0m\u001b[01;34mpaper\u001b[0m/  \u001b[01;34mrock\u001b[0m/  \u001b[01;34mscissors\u001b[0m/\n"
           ]
         }
       ]
@@ -387,7 +353,7 @@
       "metadata": {
         "id": "13JuqVJb5X_N"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -456,11 +422,11 @@
         "id": "1KygbE7b5aJc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 553
+          "height": 562
         },
-        "outputId": "f4e8a9be-2f50-434e-9758-fbefe9f4abb4"
+        "outputId": "76bacb7c-c6c6-48e9-d3a0-11b0d7ea8c62"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1223,7 +1189,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Using photo camera"
+        "### Using photo camera (**THIS METHOD IS OUTDATED, DO NOT USE IT**)"
       ],
       "metadata": {
         "id": "MwK198JZFGpf"
@@ -1241,24 +1207,6 @@
       "metadata": {
         "id": "TRrqBcXBFPq0"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from os import listdir, rename\n",
-        "from os.path import isfile, join\n",
-        "\n",
-        "for label in ['rock', 'paper', 'scissors']:\n",
-        "  ct = 1\n",
-        "  for i in [f for f in listdir(join(proj_path,label)) if isfile(join(proj_path,label, f))]:\n",
-        "    rename(join(proj_path,label,i), join(proj_path,label,label+'_'+str(ct)))\n",
-        "    ct += 1"
-      ],
-      "metadata": {
-        "id": "4Lxq44TWHVYM"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1308,6 +1256,24 @@
       "source": [
         "from os import listdir, rename\n",
         "from os.path import isfile, join\n",
+        "\n",
+        "for label in ['rock', 'paper', 'scissors']:\n",
+        "  ct = 1\n",
+        "  for i in [f for f in listdir(join(proj_path,label)) if isfile(join(proj_path,label, f))]:\n",
+        "    rename(join(proj_path,label,i), join(proj_path,label,label+'_'+str(ct)+'.jpg'))\n",
+        "    ct += 1"
+      ],
+      "metadata": {
+        "id": "4Lxq44TWHVYM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from os import listdir, rename\n",
+        "from os.path import isfile, join\n",
         "from PIL import Image \n",
         "proj_path = '/content/gdrive/MyDrive/rps'\n",
         "for label in ['rock', 'paper', 'scissors']:\n",
@@ -1321,29 +1287,29 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bcd3d477-2ffa-4634-e95e-dd9a757009c8"
+        "outputId": "00554c2f-474d-4808-fbe6-fc2dc1cab8b6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Successfully Converted rock_1\n",
-            "Successfully Converted rock_4\n",
-            "Successfully Converted rock_3\n",
-            "Successfully Converted rock_2\n",
-            "Successfully Converted rock_5\n",
-            "Successfully Converted paper_8\n",
-            "Successfully Converted paper_6\n",
-            "Successfully Converted paper_9\n",
-            "Successfully Converted paper_10\n",
-            "Successfully Converted paper_7\n",
-            "Successfully Converted scissors_11\n",
-            "Successfully Converted scissors_12\n",
-            "Successfully Converted scissors_14\n",
-            "Successfully Converted scissors_15\n",
-            "Successfully Converted scissors_13\n"
+            "Successfully Converted rock_1.jpg\n",
+            "Successfully Converted rock_2.jpg\n",
+            "Successfully Converted rock_3.jpg\n",
+            "Successfully Converted rock_4.jpg\n",
+            "Successfully Converted rock_5.jpg\n",
+            "Successfully Converted paper_1.jpg\n",
+            "Successfully Converted paper_2.jpg\n",
+            "Successfully Converted paper_3.jpg\n",
+            "Successfully Converted paper_4.jpg\n",
+            "Successfully Converted paper_5.jpg\n",
+            "Successfully Converted scissors_1.jpg\n",
+            "Successfully Converted scissors_2.jpg\n",
+            "Successfully Converted scissors_3.jpg\n",
+            "Successfully Converted scissors_4.jpg\n",
+            "Successfully Converted scissors_5.jpg\n"
           ]
         }
       ]
