Added resizing option in data collection

--- a/Project Object Recognition/2022 Camp Rock Paper Scissors/Data Collection/data_prep.ipynb
+++ b/Project Object Recognition/2022 Camp Rock Paper Scissors/Data Collection/data_prep.ipynb
@@ -155,14 +155,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M_gxzY1HUSHF",
-        "outputId": "f4d71151-673f-4a1d-8398-07632904a60c"
+        "outputId": "c2b78a73-da4f-43a2-b740-1e591acb8a6a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+            "Mounted at /content/gdrive\n"
           ]
         }
       ],
@@ -272,7 +272,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "333ddf44-3317-4de2-df31-ea1f47d1c007"
+        "outputId": "987dd29b-fb8f-4871-b22f-58bafbd53072"
       },
       "execution_count": null,
       "outputs": [
@@ -1279,7 +1279,8 @@
         "for label in ['rock', 'paper', 'scissors']:\n",
         "  for i in [f for f in listdir(join(proj_path,label)) if isfile(join(proj_path,label, f))]:\n",
         "    im = Image.open(join(proj_path,label, i))\n",
-        "    im.save(join(proj_path,label, i), 'jpeg', dpi=(600,600))\n",
+        "    im = im.resize((640,480))\n",
+        "    im.save(join(proj_path,label, i), 'jpeg')\n",
         "    print(\"Successfully Converted {}\".format(i))"
       ],
       "metadata": {
@@ -1287,7 +1288,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "00554c2f-474d-4808-fbe6-fc2dc1cab8b6"
+        "outputId": "e24c6343-b2de-4573-98b2-7a30b6e9643d"
       },
       "execution_count": null,
       "outputs": [
@@ -1297,19 +1298,12 @@
           "text": [
             "Successfully Converted rock_1.jpg\n",
             "Successfully Converted rock_2.jpg\n",
-            "Successfully Converted rock_3.jpg\n",
-            "Successfully Converted rock_4.jpg\n",
-            "Successfully Converted rock_5.jpg\n",
             "Successfully Converted paper_1.jpg\n",
             "Successfully Converted paper_2.jpg\n",
             "Successfully Converted paper_3.jpg\n",
-            "Successfully Converted paper_4.jpg\n",
-            "Successfully Converted paper_5.jpg\n",
             "Successfully Converted scissors_1.jpg\n",
             "Successfully Converted scissors_2.jpg\n",
-            "Successfully Converted scissors_3.jpg\n",
-            "Successfully Converted scissors_4.jpg\n",
-            "Successfully Converted scissors_5.jpg\n"
+            "Successfully Converted scissors_3.jpg\n"
           ]
         }
       ]
