changed data prep to allow phone based data collection method

--- a/Project Object Recognition/2022 Camp Rock Paper Scissors/Data Collection/data_prep.ipynb
+++ b/Project Object Recognition/2022 Camp Rock Paper Scissors/Data Collection/data_prep.ipynb
@@ -1189,7 +1189,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Using photo camera (**THIS METHOD IS OUTDATED, DO NOT USE IT**)"
+        "### Using photo camera"
       ],
       "metadata": {
         "id": "MwK198JZFGpf"
