--- a/Project Object Recognition/Tutorials/1 Model Initialization/pt1_Weight_Initialization.ipynb
+++ b/Project Object Recognition/Tutorials/1 Model Initialization/pt1_Weight_Initialization.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/guanshenwang/dscamp_public/blob/master/Project%20Object%20Recognition/Tutorials/1%20Model%20Initialization/pt1_Weight_Initialization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "oXvcf0k1PM_z"
       },
       "source": [
@@ -83,12 +93,26 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "79JHZE3MjBHA"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "ElcTxKGHPM_4"
       },
       "source": [
         "## 1. Zero Weight Initialization"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Ni8L2zm1kzZd"
+      }
     },
     {
       "cell_type": "markdown",
@@ -123,7 +147,11 @@
         "id": "xDYzb8GtPM_6"
       },
       "source": [
-        "![zero_weight_result](https://raw.githubusercontent.com/mahadevprakash90/dscamp_public/Aditya/Project%20Object%20Recognition/Tutorials/img/zero_weights_result.png)"
+        "![zero_weight_result](https://raw.githubusercontent.com/mahadevprakash90/dscamp_public/Aditya/Project%20Object%20Recognition/Tutorials/img/zero_weights_result.png)\n",
+        "\n",
+        "The decision boundary is -- there is no boundary.\n",
+        "\n",
+        "Why? because the model has the exactly same prediction for every example."
       ]
     },
     {
@@ -132,13 +160,22 @@
         "id": "xYntYbVyPM_6"
       },
       "source": [
-        "The model is predicting 0 for every example.\n",
         "\n",
-        "In general, initializing all the weights to zero results in the network failing to break symmetry. This means that every neuron in each layer will learn the same thing, and you might as well be training a neural network with $\\boldsymbol{n^{[l]}}=1$ for every layer, and the network is no more powerful than a linear classifier such as logistic regression.\n",
+        "\n",
+        "Initializing weights to a same value make the network fail to break symmetry. Which means that every neuron in each layer will learn the same thing. In the other words, the network is no more powerful than a linear classifier such as logistic regression.\n",
+        "\n",
+        "Below is a simple neural network:\n",
+        "\n",
+        "![title](https://qph.cf2.quoracdn.net/main-qimg-c63faaef309939f9bfa4887b4ed537df)\n",
+        "\n",
+        "In the hidden layer, all neural (blue circles) will learn the exactly same value as they all have the exactly same starting point!\n",
+        "\n",
+        "Even worse, for some activation functions, zero initizations will not help the algorithm to make any moves. Then the whole network will not learn anything but zeros.\n",
+        "\n",
         "\n",
         "<b>What you should remember</b>:\n",
         "<ul>\n",
-        "<li>The weights ${W^{[l]}}$ should be initialized randomly to break symmetry.\n",
+        "<li>The weights ${W^{[l]}}$ should NOT be initialized at the same value including zero. Instead, a random initialization is good to break symmetry.\n",
         "<li>It is however okay to initialize the biases ${b^{[l]}}$ to zeros. Symmetry is still broken so long as ${W^{[l]}}$ is initialized randomly.\n",
         "</ul>"
       ]
@@ -152,13 +189,13 @@
         "**Pros and Cons of zero initialization:**\n",
         "\n",
         "Pros:\n",
-        "1.   Convenient\n",
-        "2.   Intuitive and easy to understand\n",
+        "1.   Convenient? At least it is fast to train.\n",
         "\n",
         "Cons:\n",
-        "1.   Does not work for complex and highly non-linear problems.\n",
-        "2.   Same functions are learnt in every iteration \n",
-        "\n"
+        "1.   Only work for linear problems. (But we need a neural network!)\n",
+        "2.   Sometimes it totally learns nothing.\n",
+        "\n",
+        "It is basically a bad idea to do. Do not initialize weights to zeros.\n"
       ]
     },
     {
@@ -176,7 +213,9 @@
         "id": "hF5oL7egPM_7"
       },
       "source": [
-        "To break symmetry, the weights are initialized randomly. Following random initialization, each neuron can then proceed to learn a different function of its inputs. We will see what happens if the weights are intialized randomly, but to very large values."
+        "Now we know weights have to been set up differently. In this way, each neuron can then proceed to learn a different function of its inputs. \n",
+        "\n",
+        "Now, what happens if the weights are intialized randomly, but to very large values?"
       ]
     },
     {
@@ -203,7 +242,12 @@
         "id": "0RARV_iHhEsQ"
       },
       "source": [
-        "After training, the decision boundary, which is still not perfect, is shown below :"
+        "Good news: the cost function curve shows the network is learning! Cost is getting lower as we run more iterations.\n",
+        "\n",
+        "\n",
+        "Now we have a decision boundary to tell what the model predicts for each data point.\n",
+        "\n",
+        "Bad news: it takes a long time to run especially those random numbers are too large."
       ]
     },
     {
@@ -221,17 +265,18 @@
         "id": "Uc4bpqQjPM_8"
       },
       "source": [
-        "<b>Observations</b>:\n",
+        "<b>What to know</b>:\n",
         "<ul>\n",
-        "    <li>The cost starts very high. This is because with large random-valued weights, the last activation (sigmoid) outputs results that are very close to 0 or 1 for some examples, and when it gets that example wrong it incurs a very high loss for that example. Indeed, when $log(a^{[3]})=log(0)$, the loss goes to infinity.\n",
-        "<li>Poor initialization can lead to vanishing/exploding gradients, which also slows down the optimization algorithm.\n",
-        "<li>If you train this network longer you will see better results, but initializing with overly large random numbers slows down the optimization.\n",
-        "</ul>\n",
-        "    \n",
-        "<b>In summary</b>:\n",
-        "<ul>\n",
-        "<li>Initializing weights to very large random values does not work well.\n",
-        "<li>Hopefully intializing with small random values does better. The important question is: how small should be these random values be? Lets find out in the next part!"
+        "<li>Random initialization make the neural network do its job: each neuron is able to learn differently.\n",
+        "\n",
+        "<li>But we need to pay attention on data scales: if we pick large values to start, the gradient (will be introduced in the next session) will be too large to handle. This is called gradient explosion, which cost huge to train the model but only to get unstable results.\n",
+        "\n",
+        "<li>What about starting from small values? Values may be too small to make a signficant move. This is called gradient varnish.\n",
+        "\n",
+        "\n",
+        "A very good explanation on gradient explosion and varnishing:\n",
+        "\n",
+        "https://towardsdatascience.com/the-vanishing-exploding-gradient-problem-in-deep-neural-networks-191358470c11\n"
       ]
     },
     {
@@ -249,7 +294,8 @@
         "\n",
         "Cons:\n",
         "\n",
-        "1.   Initializing to large weights slows down the optimization\n",
+        "1.   Initializing to large weights may leads to huge calculation costs, therefore the result will be unstable.\n",
+        "2.   Smaller initial weights will slow down the optimization process.\n",
         "\n"
       ]
     },
@@ -381,8 +427,8 @@
   ],
   "metadata": {
     "colab": {
-      "name": "NN_weight_initialization.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
