--- a/Project Object Recognition/Tutorials/3 Examples/pt3_Neural_Network_Example_CIFAR_10.ipynb
+++ b/Project Object Recognition/Tutorials/3 Examples/pt3_Neural_Network_Example_CIFAR_10.ipynb
@@ -971,6 +971,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**What is more:**\n",
+        "\n",
         "Are there other initialization can be used? Yes!\n",
         "\n",
         "See details at \n",
@@ -988,15 +990,15 @@
         "nb_epoch = 10\n",
         "batch_size = 32\n",
         "\n",
-        "initializer = keras.initializers.VarianceScaling(scale=0.1, mode='fan_in', distribution='uniform')\n",
+        "initializer = keras.initializers.VarianceScaling(scale=0.1, mode='fan_in', distribution='uniform',seed = 12345)\n",
         "\n",
         "model3 = Sequential()\n",
         "model3.add(Convolution2D(5, 2, 2, input_shape=(32, 32, 3), padding='same', kernel_initializer= initializer, activation='relu')) # add parameters and activation function\n",
-        "#model2.add(MaxPooling2D(pool_size=(2, 2))) # add parameters \n",
+        "#model3.add(MaxPooling2D(pool_size=(2, 2))) # add parameters \n",
         "model3.add(Convolution2D(20, 2, 2, activation='relu', kernel_initializer= initializer)) # add parameters and activation function\n",
         "model3.add(MaxPooling2D(pool_size=(2, 2))) # add parameters \n",
-        "# model2.add(Convolution2D(30, 2, 2, activation='relu', kernel_initializer= 'he_normal')) # add parameters and activation function\n",
-        "# model2.add(MaxPooling2D(pool_size=(2, 2))) # add parameters \n",
+        "# model3.add(Convolution2D(30, 2, 2, activation='relu', kernel_initializer= 'he_normal')) # add parameters and activation function\n",
+        "# model3.add(MaxPooling2D(pool_size=(2, 2))) # add parameters \n",
         "model3.add(Flatten())\n",
         "model3.add(Dense(32, activation='relu')) # add parameters and activation function\n",
         "model3.add(Dense(nb_classes, activation='softmax')) # activation function\n",
@@ -1020,72 +1022,58 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kPiwjqiAcypt",
-        "outputId": "9313c24e-3d4a-4fd4-f9b2-1557f7a59f77"
+        "outputId": "885a5811-84e0-4d1a-b7bc-4bfded12520e"
       },
-      "execution_count": 22,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"sequential_4\"\n",
+            "Model: \"sequential_5\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " conv2d_8 (Conv2D)           (None, 16, 16, 5)         65        \n",
+            " conv2d_10 (Conv2D)          (None, 16, 16, 5)         65        \n",
             "                                                                 \n",
-            " conv2d_9 (Conv2D)           (None, 8, 8, 20)          420       \n",
+            " conv2d_11 (Conv2D)          (None, 8, 8, 20)          420       \n",
             "                                                                 \n",
-            " max_pooling2d_4 (MaxPooling  (None, 4, 4, 20)         0         \n",
+            " max_pooling2d_5 (MaxPooling  (None, 4, 4, 20)         0         \n",
             " 2D)                                                             \n",
             "                                                                 \n",
-            " flatten_4 (Flatten)         (None, 320)               0         \n",
+            " flatten_5 (Flatten)         (None, 320)               0         \n",
             "                                                                 \n",
-            " dense_8 (Dense)             (None, 32)                10272     \n",
+            " dense_10 (Dense)            (None, 32)                10272     \n",
             "                                                                 \n",
-            " dense_9 (Dense)             (None, 10)                330       \n",
+            " dense_11 (Dense)            (None, 10)                330       \n",
             "                                                                 \n",
             "=================================================================\n",
             "Total params: 11,087\n",
             "Trainable params: 11,087\n",
             "Non-trainable params: 0\n",
-            "_________________________________________________________________\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/keras/initializers/initializers.py:120: UserWarning: The initializer VarianceScaling is unseeded and being called multiple times, which will return identical values each time (even if the initializer is unseeded). Please update your code to provide a seed to the initializer, or avoid using the same initalizer instance more than once.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "_________________________________________________________________\n",
             "None\n",
             "Standard Training.\n",
             "Epoch 1/10\n",
-            "1563/1563 [==============================] - 12s 7ms/step - loss: 1.8394 - accuracy: 0.3393 - val_loss: 1.6413 - val_accuracy: 0.4221\n",
+            "1563/1563 [==============================] - 10s 6ms/step - loss: 1.8111 - accuracy: 0.3422 - val_loss: 1.6071 - val_accuracy: 0.4217\n",
             "Epoch 2/10\n",
-            "1563/1563 [==============================] - 11s 7ms/step - loss: 1.5577 - accuracy: 0.4471 - val_loss: 1.5358 - val_accuracy: 0.4583\n",
+            "1563/1563 [==============================] - 9s 6ms/step - loss: 1.5126 - accuracy: 0.4576 - val_loss: 1.4584 - val_accuracy: 0.4720\n",
             "Epoch 3/10\n",
-            "1563/1563 [==============================] - 11s 7ms/step - loss: 1.4608 - accuracy: 0.4779 - val_loss: 1.4297 - val_accuracy: 0.4886\n",
+            "1563/1563 [==============================] - 10s 6ms/step - loss: 1.4388 - accuracy: 0.4843 - val_loss: 1.4055 - val_accuracy: 0.4936\n",
             "Epoch 4/10\n",
-            "1563/1563 [==============================] - 9s 6ms/step - loss: 1.4154 - accuracy: 0.4958 - val_loss: 1.4023 - val_accuracy: 0.4991\n",
+            "1563/1563 [==============================] - 8s 5ms/step - loss: 1.3956 - accuracy: 0.5017 - val_loss: 1.3787 - val_accuracy: 0.5117\n",
             "Epoch 5/10\n",
-            "1563/1563 [==============================] - 11s 7ms/step - loss: 1.3796 - accuracy: 0.5075 - val_loss: 1.4031 - val_accuracy: 0.5017\n",
+            "1563/1563 [==============================] - 11s 7ms/step - loss: 1.3640 - accuracy: 0.5134 - val_loss: 1.3682 - val_accuracy: 0.5127\n",
             "Epoch 6/10\n",
-            "1563/1563 [==============================] - 11s 7ms/step - loss: 1.3579 - accuracy: 0.5175 - val_loss: 1.3603 - val_accuracy: 0.5141\n",
+            "1563/1563 [==============================] - 10s 7ms/step - loss: 1.3362 - accuracy: 0.5226 - val_loss: 1.3401 - val_accuracy: 0.5268\n",
             "Epoch 7/10\n",
-            "1563/1563 [==============================] - 9s 6ms/step - loss: 1.3393 - accuracy: 0.5241 - val_loss: 1.3473 - val_accuracy: 0.5197\n",
+            "1563/1563 [==============================] - 13s 8ms/step - loss: 1.3161 - accuracy: 0.5308 - val_loss: 1.3219 - val_accuracy: 0.5370\n",
             "Epoch 8/10\n",
-            "1563/1563 [==============================] - 12s 8ms/step - loss: 1.3194 - accuracy: 0.5286 - val_loss: 1.3292 - val_accuracy: 0.5249\n",
+            "1563/1563 [==============================] - 8s 5ms/step - loss: 1.2989 - accuracy: 0.5376 - val_loss: 1.3001 - val_accuracy: 0.5413\n",
             "Epoch 9/10\n",
-            "1563/1563 [==============================] - 10s 6ms/step - loss: 1.2999 - accuracy: 0.5374 - val_loss: 1.3145 - val_accuracy: 0.5323\n",
+            "1563/1563 [==============================] - 10s 7ms/step - loss: 1.2854 - accuracy: 0.5442 - val_loss: 1.3173 - val_accuracy: 0.5308\n",
             "Epoch 10/10\n",
-            "1563/1563 [==============================] - 10s 6ms/step - loss: 1.2854 - accuracy: 0.5416 - val_loss: 1.3081 - val_accuracy: 0.5336\n"
+            "1563/1563 [==============================] - 10s 6ms/step - loss: 1.2730 - accuracy: 0.5445 - val_loss: 1.3011 - val_accuracy: 0.5413\n"
           ]
         }
       ]
